--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Trabajo Practico</title>
+    <title>Trabajo Practico Tarjetita</title>
 </head>
 <body>
     
+    <div class="container">
+        <article class="tarjeta">
+            
+        </article>
+    </div>
 </body>
 </html>
