Tarjeta al 30% estilos

--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Trabajo Practico Tarjetita</title>
 </head>
+
 <body>
-    
     <div class="container">
         <article class="tarjeta">
-            
+            <div class="header">Header</div>
+            <div class="precio">
+                <ul class="sel_color">
+                    <li class="negro"></li>
+                    <li class="rojo"></li>
+                    <li class="blanco"></li>
+                    <li class="violeta"></li>
+                </ul>
+                <span>Remera lisa</span>
+                <div class="price">$ 2131</div>
+                <ul class="talles">
+                    <li>S</li>
+                    <li>M</li>
+                    <li>L</li>
+                    <li>XL</li>
+                </ul>
+            </div>
+            <div class="desc_product">Descripcion</div>
+            <div class="bottom">boton</div>
         </article>
     </div>
 </body>
+
 </html>
