transition image + iconos arreglados

--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- https://fontawesome.com/search -->
     <link rel="stylesheet" href="css/style.css">
     <title>Trabajo Practico Tarjetita</title>
 </head>
+
 <body>
     <div class="container">
         <article class="tarjeta">
             <div class="header">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-linux"></i>
-                <div class="rigth">
-                    <i class="fa-solid fa-cart-arrow-down"></i>
+                <img src="img/remeraLisa.jpg" alt="" class="imagenProd">
+                <div class="iconos flex">
                     <i class="fa-solid fa-user"></i>
-                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
-                <!-- <img src="img/pupuchaccueil-fotor-bg-remover-2024040919486.png" class="img"></img> -->
             </div>
             <div class="producto">
                 <ul class="sel_color">
@@ -29,7 +29,7 @@
                     <li class="blanco"></li>
                     <li class="violeta"></li>
                 </ul>
-                <span>Remera lisa</span>
+                <span>Super Remera gamer pro</span>
                 <div class="precio">$ 2131</div>
                 <ul class="talles">
                     <li>S</li>
@@ -39,10 +39,10 @@
                 </ul>
             </div>
             <div class="desc_product">
-                <h3>Remera Ultima Generacion Marca Pupuch 100% Original</h3>
+                <h3> Ultimas unidades disponibles.<br>
+                    Llame ya!!!</h3>
                 <details>
-                    Ultimas unidades disponibles.<br>
-                    Llame ya!!!
+                    Remera Ultima Generacion Marca Pupuch 100% Original
                 </details>
                 <!-- <input type="search" list="talles">
                 <datalist id="talles">
@@ -53,9 +53,10 @@
                 </datalist> -->
             </div>
             <div class="bottom">
-                <button type="button">Agregar al carrito</button>
+                <button type="button">Agregar al carrito<i class="fa-solid fa-cart-arrow-down"></i></button>
             </div>
         </article>
     </div>
 </body>
+
 </html>
