--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </datalist> -->
             </div>
             <div class="bottom">
-                <button type="button">Agregar al carrito<i class="fa-solid fa-cart-arrow-down"></i></button>
+                <button type="button">Agregar al carrito <br><i class="fa-solid fa-cart-arrow-down"></i></button>
             </div>
         </article>
     </div>
